Fixed bug #75355: preg_quote() does not quote # control character